<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"

    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/bg_nuevojugador">

    <EditText
        android:id="@+id/etNombreNuevoJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:inputType="textPersonName"
        android:hint="@string/etNombreJugador"

        style="@style/crearJugador"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etNivelNuevoJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="@string/etNivelUnoADiez"
        android:inputType="number"
        android:maxLength="1"

        style="@style/crearJugador"
        android:autofillHints=""/>

    <Button
        android:id="@+id/btCrearJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:layout_marginTop="20dp"

        android:text="@string/btnCrear"
        android:textColor="@color/amarillo"
        android:textSize="@dimen/itemJugador"/>

</LinearLayout>