<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".actividades.AJugadores">

    <TextView
        android:id="@+id/H1Jugadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginBottom="20dp"

        android:text="@string/h1Jugadores"
        style="@style/h1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSinJugadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/noHayJugadores"
                style="@style/textoJugadores"
                android:textAlignment="center"/>


            <LinearLayout
                android:id="@+id/divDatosJugadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginEnd="80dp"

                        android:text="@string/tvNombre"
                        style="@style/textoJugadores"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/tvNivel"
                        style="@style/textoJugadores"/>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvJugadores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btNuevoJugador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:layout_gravity="center"

                android:background="@drawable/btn_nuevo_jugador"
                android:contentDescription="@string/btnNuevoJugador" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>